--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.1",
     "swr": "^1.3.0",
     "web-vitals": "^2.1.4"
   },
