--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tanstack/react-query": "^4.23.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "daisyui": "^2.49.0",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-daisyui": "^3.0.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
@@ -21,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
     "swr": "^1.3.0",
+    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,8 +52,14 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.0.27",
+    "@types/react-datepicker": "^4.8.0",
+    "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4"
   }
 }
