--- a/package.json
+++ b/package.json
@@ -61,5 +61,9 @@
     "postcss": "^8.4.19",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4"
+  },
+  "resolutions": {
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10"
   }
 }
